--- a/src/components/Band/Band.css
+++ b/src/components/Band/Band.css
@@ -1,6 +1,12 @@
-.Band {
-    padding: 5px;
-    margin: 3px;
-    border: 1px;
-    border-radius: 5px;
+.card {
+    height: 300px;
+    width: 100%;
+    /* margin-bottom: 5px; */
+    color: black;
+}
+
+.band-title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 28px;
+    font: bold;
 }
