--- a/src/components/Band/Band.css
+++ b/src/components/Band/Band.css
@@ -1,12 +1,18 @@
 .card {
-    height: 300px;
+    height: 350px;
     width: 100%;
     /* margin-bottom: 5px; */
     color: black;
+    border: 1px solid black ;
 }
 
 .band-title {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 28px;
     font: bold;
+}
+
+.card-body > .row > p {
+    /* font-size: 22px; */
+    margin-right: 5px;
 }
