--- a/src/components/Band/Band.css
+++ b/src/components/Band/Band.css
@@ -1,14 +1,25 @@
+bold {
+    font: bold;
+    color: black;
+}
+
 .card {
-    height: 350px;
-    width: 100%;
+    height: 450px;
+    width: 400px;
+    padding: 5px;
+    text-align: center;
     /* margin-bottom: 5px; */
     color: black;
     border: 1px solid black ;
 }
 
+.card span {
+    font: bolder;
+}
+
 .band-title {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 28px;
+    font-size: 35px;
     font: bold;
 }
 
